Fix the spacing on forumsmain

--- a/src/css/forumsPages/main.scss
+++ b/src/css/forumsPages/main.scss
@@ -19,7 +19,7 @@
 }
 
 .act-index.cont-groups {
-  background: linear-gradient(180deg, #0083BE, #009994, #009994, #009994, #56b9b4) !important;
+  background: linear-gradient(180deg, #0083BE, #009994, #009994, #009994) !important;
 }
 
 .group_list {
@@ -49,7 +49,7 @@
 }
 
 .group_summary {
-  width: 48%;
+  width: 95%;
   background-color: rgba(0, 0, 0, 0.5) !important;
   font-size: 20px;
   font-weight: 600;
@@ -64,10 +64,6 @@
 
   &:hover {
     background-color: rgba(0, 0, 0, 0.7) !important;
-  }
-
-  &:last-of-type {
-    float: left !important;
   }
 
   .button,
